# ur3_pick_and_place

./: CMakeLists.txt  LICENSE  README.md  package.xml  run_pick_and_place.sh
config/: robot_params.yaml
launch/: pick_and_place.launch.py  ur_moveit.launch.py
scripts/: rtde_pick_and_place.py
src/: pick_and_place.cpp
urdf/: ur_robot.urdf.xacro
