<package format="3">
  <name>ur_pick_and_place</name>
  <version>0.0.1</version>
  <description>Pick and Place task using Universal Robots in ROS2</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ur_robot_driver</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
